2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/component/component.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	  update state in admin of components properly.  Still hacky
	  since we say a component is ready when the first *feed* on it
	  is, but we'll fix that with moods !

2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/header.py:
	semi-final header

2004-10-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/save.py: Boolean expression was broken, it's
	now as it should be.
	* flumotion/wizard/steps.py: Don't skip audio encoding page if we
	have both audio and video. Don't skip encoding if we're chosing a
	audio page without a configuration, instead of going directly to
	consumption page.

2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/Makefile.am:
	* doc/redhat/flu-manager:
	* doc/redhat/flu-worker:
	* doc/redhat/init.d/flu-manager:
	* doc/redhat/sysconfig/flumotion-manager:
	* doc/redhat/sysconfig/flumotion-worker:
	* flumotion.spec.in:

	More package fixes, service starts up nicely now, yay

2004-10-19  Johan Dahlin  <johan@gnome.org>

	* data/glade/admin.glade:
	* data/glade/wizard_source.glade:
	* flumotion/admin/gtk/client.py:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/save.py:
	* flumotion/wizard/steps.py:

	Remove some broken stuff in the admin interface.
	Improve the wizard, it was quite broken.
	
2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	* flumotion/manager/main.py:
	  moved pem, fixed an oops

2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/Makefile.am:
	* doc/redhat/flu-manager:
	* flumotion.spec.in:
	  fix dist

2004-10-19  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	* flumotion/component/muxers/ogg.py:
	* flumotion/component/producers/Makefile.am: