@@ -1,3 +1,8 @@
+2004-10-19  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/wizard/save.py:
+	Generate a runnable firewire configuration
+
 2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/admin/admin.py:
